# rust-guessing-game

./: .gitignore  Cargo.toml  README.md  compile.bat  compile.sh
config/: options.json
locales/: README.md  de-DE.json  en-US.json  en-US.jsonc  gr-EL.json  gr-EL.jsonc  template.json  template.jsonc
src/: commands.rs  locales.rs  main.rs
