[package]
name = "hinted_guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2.1"